force-app/main/default/objects/Tenant__c/fields/Areacode__c.field-meta.xml
<CustomField>
    <fullName>Areacode__c</fullName>
    <label>Areacode</label>
    <length>11</length>
    <type>Text</type>
</CustomField>