force-app/main/default/objects/Tenant__c/fields/NumberOfOrder__c.field-meta.xml
<CustomField>
    <fullName>NumberOfOrder__c</fullName>
    <label>NumberOfOrder</label>
    <summaryForeignKey>Tenant_Order__c.Tenant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>