force-app/main/default/objects/Tenant__c/validationRules/AreacodeNumeric.validationRule-meta.xml
<ValidationRule>
    <fullName>AreacodeNumeric</fullName>
    <active>true</active>
    <description>AreaCode must not be empty and it must be numeric.must be 5 digit</description>
    <errorConditionFormula>ISBLANK( Areacode__c ) || NOT(  ISNUMBER( Areacode__c )  ) ||
    LEN( Areacode__c )  &lt;&gt;   5</errorConditionFormula>
    <errorDisplayField>Areacode__c</errorDisplayField>
    <errorMessage>AreaCode must not be empty and it must be numeric and it must be 5 digit.</errorMessage>
</ValidationRule>