force-app/main/default/objects/Tenant__c/validationRules/Discount_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Limit</fullName>
    <active>true</active>
    <description>Validates that a custom discount percent field is between 0 and 40%.</description>
    <errorConditionFormula>Discount_Percentage__c  &lt; 0  ||  Discount_Percentage__c  &gt; 0.4</errorConditionFormula>
    <errorDisplayField>Discount_Percentage__c</errorDisplayField>
    <errorMessage>discount percent must be between 0 and 40%.</errorMessage>
</ValidationRule>