force-app/main/default/objects/Tenant__c/validationRules/LastName.validationRule-meta.xml
<ValidationRule>
    <fullName>LastName</fullName>
    <active>true</active>
    <description>can not be empty or it can not contain &apos;test&apos; or &apos;TEST&apos;</description>
    <errorConditionFormula>ISBLANK( Last_Name__c ) || 

CONTAINS(Last_Name__c,&apos;test&apos; ) ||

CONTAINS(Last_Name__c,&apos;TEST&apos; )</errorConditionFormula>
    <errorDisplayField>Last_Name__c</errorDisplayField>
    <errorMessage>Last name can not be empty or it can not contain &apos;test&apos; or &apos;TEST&apos;</errorMessage>
</ValidationRule>