force-app/main/default/objects/Tenant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>NumberOfOrder__c</columns>
    <columns>Email__c</columns>
    <columns>Social_Security_Number__c</columns>
    <columns>Discount_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>